# Cash-Register

./: .env.example  .gitignore  CLAUDE.md  Clinic_Cash_Register.xlsx  README.md  context.md  docker-compose.yml  notes.md
.claude/: settings.json
api/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py  services.py
api/app/migrations/: env.py
api/app/migrations/versions/: 6e352769454d_initial_schema.py  a1b2c3d4e5f6_link_discount_to_payment.py  a77580de772b_initial_schema.py
api/app/money_math/: __init__.py  core.py  types.py
api/app/routers/: config.py  corrections.py  dashboard.py  devauth.py  exports.py  members.py  movements.py  patients.py  periods.py  reminders.py  reports.py  setup.py
api/tests/: APP-TEST-CASES.md  MONEY-MATH-TEST-CASES.md  conftest.py  test_access_control.py  test_features.py  test_members.py  test_money_math.py  test_walking_skeleton.py  util.py
docs/: PRD-clinic-cash-register.md  V1-build-plan.md  deploy-home-server.md
docs/adr/: 0001-tech-stack.md  0002-settlement-rebalances-profit-only.md  0003-close-produces-statement-payment-recorded-separately.md  0004-settlement-splits-period-at-share-change-boundaries.md  0005-single-clinic-in-practice-multi-clinic-ready-in-schema.md  0006-soft-delete-and-audit-foundational-from-m0.md  0007-money-movement-single-typed-row-not-double-entry.md  (+1 more)
web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+24 files in other folders)
